[metadata]
name = set-laser-current-levels
version = 0.1.0
author = Elena Kotlyarova
author_email = elenakotlyrova@gmail.com
description = Sets laser current levels via UDP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ci-gitlab-30.peleng.by/kotlyarova_ev/set-laser-current-levels
keywords = laser

[options]
packages = set_laser_current_levels
#python_requires = >=3.7
zip_safe = True
package_dir =
    = src

[options.entry_points]
console_scripts =
        set-laser-current-levels = set_laser_current_levels:main
